--- a/resources/scss/animations/animation_home_hero_banner.scss
+++ b/resources/scss/animations/animation_home_hero_banner.scss
@@ -14,7 +14,7 @@
 }
 
 .animate-border::before {
-    background-color: black; /* Ajusta el color según tu diseño */
+    background-color: blue; /* Ajusta el color según tu diseño */
     content: "";
     height: 0; /* Altura inicial del borde */
     position: absolute;
