--- a/resources/scss/partials/header.scss
+++ b/resources/scss/partials/header.scss
@@ -4,5 +4,5 @@ header{
     }
 }
 .scrolled-bottom{
-    @apply shadow-md bg-white text-black dark:bg-black dark:text-white;
+    @apply shadow-md bg-white text-blue dark:bg-blue dark:text-white;
 }
