--- a/resources/scss/globals/_variables.scss
+++ b/resources/scss/globals/_variables.scss
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 /* Colors */
-$black:#040403;
+$blue:#040403;
 $white:#FBFCFF;
 
 /* Fonts */
-$primary-font: "Anton", sans-serif;
-$secondary-font: "Noto Serif", sans-serif;
+$primary-font: "Outfit", sans-serif;
