--- a/resources/scss/partials/footer.scss
+++ b/resources/scss/partials/footer.scss
@@ -1,5 +1,5 @@
 footer{
-    @apply bg-black text-white;
+    @apply bg-blue text-white;
     .footer-container{
         @apply max-w-screen-xl mx-auto flex flex-col items-center gap-y-8 py-12 px-4 md:flex-row md:justify-between;
         .footer-logo{
@@ -8,7 +8,7 @@ footer{
                 @apply w-36 h-auto fill-white mx-auto md:mx-0;
             }
             .social-icons a{
-                @apply h-8 w-8 aspect-square rounded-md flex justify-center items-center ring-1 text-white bg-white/15 ring-white/20 hover:bg-primary hover:text-white hover:ring-primary_darker transition-all;
+                @apply h-8 w-8 aspect-square rounded-md flex justify-center items-center ring-1 text-white bg-white/15 ring-white/20 hover:bg-primary hover:text-white hover:ring-secondary_blue transition-all;
             }
         }
         .footer-menu{
