--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -31,7 +31,10 @@ body{
         @apply hover:text-primary;
     }
     .logo{
-        @apply h-auto max-w-24 transition-all fill-primary;
+        @apply h-auto max-w-40 transition-all fill-primary;
+        a{
+            @apply hover:bg-transparent hover:text-white;
+        }
     }
     // nav{
     //     .logo{
@@ -50,7 +53,7 @@ body{
         }
     }
     header{
-        @apply h-auto fixed top-0 w-full block shadow-none bg-transparent text-blue dark:text-white;
+        @apply h-auto fixed top-0 w-full block shadow-none bg-transparent text-white dark:text-white;
         transition: top 0.3s, background-color 0.3s ease;
         i {
             @apply leading-none text-lg;
@@ -69,7 +72,7 @@ body{
     }
     header, .mobile-menu{
         a{
-            @apply hover:bg-gray-100 focus:bg-gray-100 active:bg-gray-100 dark:hover:bg-neutral-900 dark:focus:bg-neutral-900 dark:active:bg-neutral-900;
+            @apply hover:bg-primary focus:bg-primary active:bg-primary hover:text-blue focus:text-blue active:text-blue dark:hover:bg-neutral-900 dark:focus:bg-neutral-900 dark:active:bg-neutral-900;
         }
         .dropdown{
             @apply absolute z-10 w-full text-center;
@@ -141,7 +144,10 @@ body{
         @apply h-px border-t-0 bg-transparent bg-gradient-to-r from-transparent via-blue to-transparent opacity-30 dark:via-white my-16;
     }
     // Social icons
-    .social-icons a{
-        @apply aspect-square rounded-md flex justify-center items-center ring-1 text-blue/70 bg-blue/5 ring-blue/20 hover:bg-primary hover:text-white hover:ring-secondary_blue transition-all dark:text-white/50 dark:bg-white/5 dark:ring-white/20 dark:hover:bg-primary dark:hover:text-white dark:hover:ring-secondary_blue;
+    .social-icons{
+        @apply text-white;
+        a{
+            @apply aspect-square rounded-md flex justify-center items-center hover:bg-primary hover:text-blue transition-all;
+        }
     }
 }
