--- a/resources/scss/partials/home.scss
+++ b/resources/scss/partials/home.scss
@@ -27,47 +27,28 @@
     }
 }
 #services{
-    .card {
-        @apply relative h-auto w-full flex flex-col justify-between aspect-square gap-8;
-        .imgBx{
-            @apply relative h-full w-full rounded-3xl bg-cover bg-center;
-            .price{
-                @apply absolute flex items-center bg-white dark:bg-blue rounded-bl-3xl h-20 w-auto right-0 px-4 py-4;
-            }
-            .price::after{
-                @apply absolute rounded-full bg-transparent h-12 -left-12 top-0 w-12 shadow-[24px_-24px_0_0_rgba(251,252,255,1)] dark:shadow-[24px_-24px_0_0_rgba(10,10,10,1)];
-                content: '';
-            }
-            .price::before{
-                @apply absolute rounded-full bg-transparent h-12 right-0 -bottom-12 w-12 shadow-[24px_-24px_0_0_rgba(251,252,255,1)] dark:shadow-[24px_-24px_0_0_rgba(10,10,10,1)];
-                content: '';
-            }
+    @apply my-16;
+    .service-button{
+        @apply w-full border border-blue/10 py-4 px-8 rounded-2xl flex items-center justify-between;
+        .service-icon{
+            @apply text-xl mr-4;
+            line-height: 0;
         }
-        .content{
-            @apply flex flex-col gap-4 px-8;
-            .card-title{
-                @apply flex justify-between;
-                a{
-                    @apply text-primary text-3xl;
-                }      
-            }
+        i{
+            line-height: 0;
+        }
+        .service-bg-arrow{
+            @apply flex items-center justify-center w-6 h-6 bg-blue/10 text-blue rounded-full;
         }
     }
-    .splide__pagination{
-        @apply relative mt-16 gap-1;
-        .splide__pagination__page{
-            @apply bg-[#D9D9D9] w-4 h-4;
-            border-radius:20px;
-            cursor:pointer;
-            transition:0.3s ease width;
-
-        }
-        .splide__pagination__page.is-active{
-            @apply bg-primary scale-100 w-8;
+    .service-button-active{
+        @apply bg-gradient-to-b from-blue to-secondary_blue text-white;
+        .service-bg-arrow{
+            @apply bg-primary;
         }
     }
-    .vertical-text{
-        writing-mode: vertical-lr;
+    .service-description{
+        @apply bg-slate-100;
     }
 }
 #faqs{
