--- a/resources/scss/partials/home.scss
+++ b/resources/scss/partials/home.scss
@@ -48,7 +48,7 @@
         }
     }
     .service-description{
-        @apply bg-slate-100;
+        @apply bg-slate-100 rounded-3xl;
     }
 }
 #faqs{
