--- a/resources/scss/partials/home.scss
+++ b/resources/scss/partials/home.scss
@@ -51,6 +51,19 @@
         @apply bg-slate-100 rounded-3xl;
     }
 }
+//Cobertura
+.cobertura{
+    iframe{
+        @apply w-full h-[450px];
+    }
+    .cobText::before{
+        @apply bg-none sm:bg-[url('/storage/app/public/img/destination.png')] bg-no-repeat bg-contain bg-right-bottom top-0 sm:bottom-36 md:bottom-4 right-4 lg:bottom-0 lg:right-24 lg:top-auto w-16 h-16 lg:w-full lg:h-full absolute;
+        content: "";
+        max-height: 85px;
+        opacity: 0.5;
+    }
+}
+// Fin Cobertura
 #faqs{
     .questions{
         @apply flex flex-col md:flex-row justify-between flex-wrap w-full gap-4;
