--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1,5 +1,8 @@
 @use './globals' as *;
 @use './animations/animations' as *;
+html {
+    scroll-behavior: smooth;
+  }
 body{
     @apply bg-white text-blue dark:bg-blue dark:text-white;
     font-family: $primary-font;
@@ -83,7 +86,7 @@ body{
         .dropdown{
             @apply absolute z-10 w-full text-center;
             li{
-                @apply bg-gray-100 dark:bg-neutral-900 dark:hover:bg-neutral-800 w-full;
+                @apply bg-gray-100 text-blue dark:bg-neutral-900 dark:hover:bg-neutral-800 w-full;
                 a{
                     @apply pt-0 pb-0 hover:bg-gray-200 dark:hover:bg-neutral-800;
                 }
