--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -146,7 +146,7 @@ body{
         }
     // Contenedor gral
     .container{
-        @apply w-full max-w-screen-xl mx-auto px-4 border-x-2 2xl:px-0;
+        @apply w-full max-w-screen-xl mx-auto px-4 2xl:px-0;
     }
     // línea divisoria
     .divider{ 
